manifests/istio-system/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"cluster-jwks-proxy"},"name":"cluster-jwks-proxy","namespace":"istio-system"},"spec":{"ports":[{"name":"http","port":80,"targetPort":"http"}],"selector":{"app.kubernetes.io/name":"cluster-jwks-proxy"}}}
    labels:
      app.kubernetes.io/name: cluster-jwks-proxy
    name: cluster-jwks-proxy
    namespace: istio-system
  spec:
    clusterIP: 10.111.63.15
    clusterIPs:
    - 10.111.63.15
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    selector:
      app.kubernetes.io/name: cluster-jwks-proxy
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"cluster-local-gateway","istio":"cluster-local-gateway"},"name":"cluster-local-gateway","namespace":"istio-system"},"spec":{"ports":[{"name":"http2","port":80,"targetPort":8080},{"name":"https","port":443,"targetPort":8443}],"selector":{"app":"cluster-local-gateway","istio":"cluster-local-gateway"},"type":"ClusterIP"}}
    labels:
      app: cluster-local-gateway
      istio: cluster-local-gateway
    name: cluster-local-gateway
    namespace: istio-system
  spec:
    clusterIP: 10.96.117.128
    clusterIPs:
    - 10.96.117.128
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    selector:
      app: cluster-local-gateway
      istio: cluster-local-gateway
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":30413,"protocol":"TCP","serviceName":"istio-system:istio-ingressgateway","allNodes":true},{"port":30750,"protocol":"TCP","serviceName":"istio-system:istio-ingressgateway","allNodes":true}]'
    labels:
      app: istio-ingressgateway
      install.operator.istio.io/owning-resource: installed-state-installed-state
      install.operator.istio.io/owning-resource-namespace: istio-system
      istio: ingressgateway
      istio.io/rev: default
      operator.istio.io/component: IngressGateways
      operator.istio.io/managed: Reconcile
      operator.istio.io/version: 1.22.1
      release: istio
    name: istio-ingressgateway
    namespace: istio-system
  spec:
    clusterIP: 10.99.114.43
    clusterIPs:
    - 10.99.114.43
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http2
      nodePort: 30413
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      nodePort: 30750
      port: 443
      protocol: TCP
      targetPort: 8443
    selector:
      app: istio-ingressgateway
      istio: ingressgateway
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: istiod
      install.operator.istio.io/owning-resource: installed-state-installed-state
      install.operator.istio.io/owning-resource-namespace: istio-system
      istio: pilot
      istio.io/rev: default
      operator.istio.io/component: Pilot
      operator.istio.io/managed: Reconcile
      operator.istio.io/version: 1.22.1
      release: istio
    name: istiod
    namespace: istio-system
  spec:
    clusterIP: 10.108.80.153
    clusterIPs:
    - 10.108.80.153
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: grpc-xds
      port: 15010
      protocol: TCP
      targetPort: 15010
    - name: https-dns
      port: 15012
      protocol: TCP
      targetPort: 15012
    - name: https-webhook
      port: 443
      protocol: TCP
      targetPort: 15017
    - name: http-monitoring
      port: 15014
      protocol: TCP
      targetPort: 15014
    selector:
      app: istiod
      istio: pilot
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"net-istio","app.kubernetes.io/name":"knative-serving","app.kubernetes.io/version":"1.12.3","experimental.istio.io/disable-gateway-port-translation":"true","networking.knative.dev/ingress-provider":"istio"},"name":"knative-local-gateway","namespace":"istio-system"},"spec":{"ports":[{"name":"http2","port":80,"targetPort":8081}],"selector":{"istio":"ingressgateway"},"type":"ClusterIP"}}
    labels:
      app.kubernetes.io/component: net-istio
      app.kubernetes.io/name: knative-serving
      app.kubernetes.io/version: 1.12.3
      experimental.istio.io/disable-gateway-port-translation: "true"
      networking.knative.dev/ingress-provider: istio
    name: knative-local-gateway
    namespace: istio-system
  spec:
    clusterIP: 10.98.6.60
    clusterIPs:
    - 10.98.6.60
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 8081
    selector:
      istio: ingressgateway
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
